--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "dependencies": {
     "ejs": "^2.6.1",
     "nodemon": "^1.18.9",
-    "passport": "^0.4.0"
+    "passport": "^0.4.0",
+    "popups": "^1.1.3",
+    "python-shell": "^1.0.6"
   }
 }
