--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/callumnelson95/data-wise#readme",
   "dependencies": {
     "ejs": "^2.6.1",
+    "express": "^4.16.4",
     "nodemon": "^1.18.9",
     "passport": "^0.4.0",
     "popups": "^1.1.3",
