--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
     "start": "nodemon index.js"
   },
   "repository": {
@@ -27,5 +28,9 @@
     "passport": "^0.4.0",
     "popups": "^1.1.3",
     "python-shell": "^1.0.6"
+  },
+  "engines":{
+    "node": "v7.7.2",
+    "npm": "4.1.2"
   }
 }
