--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
     "start": "nodemon index.js"
   },
   "repository": {
@@ -26,10 +25,11 @@
     "express": "^4.16.4",
     "nodemon": "^1.18.9",
     "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "popups": "^1.1.3",
     "python-shell": "^1.0.6"
   },
-  "engines":{
+  "engines": {
     "node": "v7.7.2",
     "npm": "4.1.2"
   }
