--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   },
   "homepage": "https://github.com/callumnelson95/data-wise#readme",
   "dependencies": {
+    "consolidate": "^0.15.1",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "morgan": "^1.9.1",
     "nodemon": "^1.18.9",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
