--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   "dependencies": {
     "consolidate": "^0.15.1",
     "cookie-parser": "^1.4.3",
+    "csv-write-stream": "^2.0.0",
     "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "fs": "0.0.1-security",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.9",
     "passport": "^0.4.0",
