Survey ID checking working

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "consolidate": "^0.15.1",
     "cookie-parser": "^1.4.3",
     "csv": "^5.1.0",
+    "csv-parse": "^4.3.0",
     "csv-write-stream": "^2.0.0",
     "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
@@ -31,6 +32,7 @@
     "express-session": "^1.15.6",
     "fs": "0.0.1-security",
     "morgan": "^1.9.1",
+    "node-csv": "^0.1.2",
     "nodemon": "^1.18.9",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
